--- a/src/index.styl
+++ b/src/index.styl
@@ -30,7 +30,7 @@ body {
 }
 .app footer {
   width: 100%;
-  height: 50px;
+  height: 75px;
   margin: 0;
   padding: 0;
   background-color: #eee;
@@ -49,4 +49,5 @@ body {
 
 .app footer button {
   flex-grow: 1;
+  font-size: 2em;
 }
