--- a/src/index.styl
+++ b/src/index.styl
@@ -51,9 +51,13 @@ body {
 
 .app .main .timer {
   display: block;
-  font-size: 3em;
+  font-size: 1.5em;
   text-align: center;
   font-family: monospace;
+}
+
+.app .main .timer.current {
+  font-size: 3.0em;
 }
 
 .app footer button {
