--- a/src/index.styl
+++ b/src/index.styl
@@ -52,12 +52,16 @@ body {
 .app .main .timer {
   display: block;
   font-size: 1.5em;
+  margin: 1em;
   text-align: center;
   font-family: monospace;
 }
 
 .app .main .timer.current {
   font-size: 3.0em;
+}
+.app .main .timer.current .title {
+  display: block;
 }
 
 .app footer button {
