--- a/src/index.styl
+++ b/src/index.styl
@@ -42,11 +42,10 @@ body {
   align-content: stretch;
 }
 
-.app .main .event {
+.app .main .workout {
   display: block;
-  font-size: 3em;
-  text-align: center;
-  font-family: monospace;
+  width: 100%;
+  height: 100px;
 }
 
 .app .main .timer {
