--- a/src/index.styl
+++ b/src/index.styl
@@ -29,18 +29,29 @@ body {
   text-align: center;
 }
 
+.app .main .workoutTitle {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: monospace;
+  font-size: 3em;
+}
+
 .app .main .workout {
   display: block;
   width: 100%;
-  height: 100px;
+  height: 200px;
+  margin: 1em 0;
 }
 
 .app .main .timers {
   width: 100%;
+  margin: 2em 0;
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  align-content: stretch;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: space-around;
 }
 
 .app .main .timer {
@@ -50,27 +61,27 @@ body {
   text-align: center;
   font-family: monospace;
   border: 1px solid #fff;
-  border-radius: 0.5em;
-  margin: 1em;
-  padding: 1em;
+  // border-radius: 0.5em;
+  margin: 0 0.5em;
+  padding: 0.5em 0.25em;
   text-align: center;
 }
 
 .app .main .timer .title {
   display: block;
+  font-size: 0.75em;
 }
 
 .app .main .timer.current {
   font-size: 2.5em;
-  width: 4.5em;
 }
 
 .app footer {
   width: 100%;
-  height: 75px;
+  height: 50px;
   margin: 0;
   padding: 0;
-  /*background-color: #eee;*/
+  // background-color: #eee;
   color: #111;
   display: flex;
   flex-direction: row;
@@ -82,7 +93,7 @@ body {
   flex-grow: 1;
   font-size: 2em;
   border: 1px solid #000;
-  border-radius: 0.25em;
+  border-radius: 0;
 }
 
 .app.running footer button.playpause {
