Wrap up clock bar in a single parent view; misc style tweaks & refactoring

--- a/src/index.styl
+++ b/src/index.styl
@@ -1,7 +1,7 @@
 html, body, .app { height: 100% }
 
 body {
-  background-color: #111;
+  background-color: #000;
   color: #eee;
   padding: 0;
   margin: 0;
@@ -24,8 +24,8 @@ body {
   line-height: 50px;
   margin: 0;
   padding: 0;
-  background-color: #eee;
-  color: #111;
+  background-color: #888;
+  color: #000;
   text-align: center;
 }
 
@@ -81,8 +81,8 @@ body {
   height: 50px;
   margin: 0;
   padding: 0;
-  // background-color: #eee;
-  color: #111;
+  background-color: #666;
+  color: #c000;
   display: flex;
   flex-direction: row;
   align-items: stretch;
@@ -90,6 +90,7 @@ body {
 }
 
 .app footer button {
+  background-color: #666;
   flex-grow: 1;
   font-size: 2em;
   border: 1px solid #000;
@@ -97,9 +98,9 @@ body {
 }
 
 .app.running footer button.playpause {
-  color: red;
+  color: #e33;
 }
 
 .app.stopped footer button.playpause {
-  color: green;
+  color: #3e3;
 }
