--- a/src/index.styl
+++ b/src/index.styl
@@ -38,6 +38,10 @@ body {
 
   }
 
+  &.home button.back {
+    display: none;
+  }
+
   section.main {
     height: 100%;
     margin-top: 50px;
@@ -45,13 +49,17 @@ body {
     .workoutList {
 
       ul.workouts {
-        margin: 1em; padding: 0;
+        margin: 0; padding: 0;
         list-style-type: none;
         display: flex;
         flex-direction: column;
 
         li.workout {
-          margin: 1em 0 0 0; padding: 0;
+          cursor: pointer;
+
+          min-height: 50px;
+          margin: 1em 0 0 0; padding: 0 0 1em 0;
+          border-bottom: 1px solid #666;
 
           .title {
             display: block;
@@ -150,26 +158,32 @@ body {
         align-content: stretch;
 
         button {
-          background-color: #666;
+          background: #666;
           flex-grow: 1;
           font-size: 2em;
           border: 1px solid #000;
           border-radius: 0;
+          whitespace: no-wrap;
         }
+
+        button.playpause { width: 50px; }
+        button.playpause span { display: none; }
 
       }
 
     }
 
     .workoutView.running {
-      footer button.playpause {
-        color: #e33;
+      footer {
+        button.playpause { color: #662222; }
+        button.playpause:before { content: '\2589'; }
       }
     }
 
     .workoutView.stopped {
-      footer button.playpause {
-        color: #3e3;
+      footer {
+        button.playpause { color: #226622; }
+        button.playpause:before { content: '\25ba'; }
       }
     }
 
