--- a/src/index.styl
+++ b/src/index.styl
@@ -29,8 +29,9 @@ body {
       display: block;
       position: absolute;
       border: none;
+      border-radius: 0;
       border-right: 1px solid #000;
-      background-color: #888;
+      background: #888;
       left: 0; top: 0;
       width: 50px; height: 50px;
       font-size: 1em;
