More help; tweaks to scrolling

--- a/src/index.styl
+++ b/src/index.styl
@@ -67,9 +67,10 @@ body {
 
   section.main {
     height: 100%;
-    margin-top: 50px;
+    // margin-top: 50px;
 
     .workoutList {
+      margin-top: 50px;
 
       ul.workouts {
         margin: 0; padding: 0;
@@ -105,13 +106,23 @@ body {
     }
 
     .helpView {
+      margin-top: 50px;
+      
       padding: 1em 2em;
+
+      p code {
+        border-radius: 0;
+        background: #888;
+        padding: 0 0.5em;
+        color: #000;
+        font-weight: bold;
+      }
+
     }
 
     .workoutView {
 
       height: 100%;
-      margin-bottom: 50px;
 
       display: flex;
       flex-direction: column;
