Small loading tweaks

--- a/src/index.styl
+++ b/src/index.styl
@@ -75,6 +75,11 @@ body {
 
     .startupView {
       margin-top: 50px;
+      h2 {
+        line-height: 100vh;
+        text-align: center;
+        color: #999;
+      }
     }
 
     .workoutList {
